[gd_scene load_steps=5 format=3 uid="uid://ccdgsloci76th"]

[ext_resource type="Texture2D" uid="uid://5qrkp1is20bg" path="res://assets/UI/new_game/new_game.PNG" id="1_7epb8"]
[ext_resource type="Script" path="res://scenes/mini_games/new_game/new_game.gd" id="1_vf8ms"]
[ext_resource type="Texture2D" uid="uid://caybnuukktl3w" path="res://assets/UI/dialog box medium.png" id="2_qn52g"]
[ext_resource type="FontFile" uid="uid://cotm02uvrmm48" path="res://assets/UI/fonts/Jersey10-Regular.ttf" id="3_d0sga"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vf8ms")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = -277.0
offset_right = 1319.0
offset_bottom = 747.0
texture = ExtResource("1_7epb8")

[node name="Button" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 31.0
offset_top = 772.0
offset_right = 448.0
offset_bottom = 891.0

[node name="Button2" type="Button" parent="TextureRect"]
offset_left = 490.0
offset_top = 766.0
offset_right = 840.0
offset_bottom = 896.0

[node name="Button3" type="Button" parent="TextureRect"]
offset_left = 884.0
offset_top = 767.0
offset_right = 1244.0
offset_bottom = 901.0

[node name="ExitButton" type="Button" parent="TextureRect"]
layout_mode = 0
offset_left = 1006.0
offset_top = 698.0
offset_right = 1108.0
offset_bottom = 747.0
theme_override_fonts/font = ExtResource("3_d0sga")
theme_override_font_sizes/font_size = 28
text = ">>EXIT
"

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 33.0
offset_right = 745.0
offset_bottom = 288.0
texture = ExtResource("2_qn52g")
flip_h = true

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect2"]
layout_mode = 0
offset_left = 38.0
offset_top = 60.0
offset_right = 667.0
offset_bottom = 194.0

[node name="TextureRect3" type="TextureRect" parent="."]
offset_left = 721.0
offset_top = 184.0
offset_right = 1087.0
offset_bottom = 395.0
texture = ExtResource("2_qn52g")

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect3"]
layout_mode = 0
offset_left = 34.0
offset_top = 53.0
offset_right = 342.0
offset_bottom = 161.0
theme_override_fonts/normal_font = ExtResource("3_d0sga")
